src/core-crm/objects/Success_Action__c/Success_Action__c.object-meta.xml
<CustomObject>
    <description>Contains the actions related to a success plan.</description>
    <label>Success Action</label>
    <nameField>
        <displayFormat>SAC-{000000}</displayFormat>
        <label>Success Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>