src/core-crm/objects/Success_Action__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The recommended action for the student to take</description>
    <label>Action</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>