src/core-crm/objects/Success_Action__c/fields/Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Action_Status__c</fullName>
    <description>The status of the action</description>
    <label>Action Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>