src/core-crm/objects/Success_Action__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <description>The actual date the action was completed</description>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>