src/core-crm/objects/Success_Action__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <description>The actual date the action started</description>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>