src/core-crm/objects/Success_Action__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>The goal statement for the action</description>
    <label>Goal</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>