src/core-crm/objects/Success_Action__c/fields/Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used by migration framework for data movement</description>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>