src/core-crm/objects/Success_Action__c/fields/Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_End_Date__c</fullName>
    <description>The planned date to complete the action by</description>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>