src/core-crm/objects/Success_Action__c/fields/Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date__c</fullName>
    <description>The planned date to start the action</description>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>