src/core-crm/objects/Success_Action__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <description>The resources identified to aid the student on the success action</description>
    <label>Resource</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>