src/core-crm/objects/Success_Action__c/fields/Success_Plan__c.field-meta.xml
<CustomField>
    <fullName>Success_Plan__c</fullName>
    <description>The recommended plan for the student</description>
    <label>Success Plan</label>
    <referenceTo>Success_Plan__c</referenceTo>
    <relationshipLabel>Success Actions</relationshipLabel>
    <relationshipName>Success_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>