src/core-crm/objects/Success_Action__c/fields/Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Time_Frame__c</fullName>
    <description>The recommended time frame to complete the action</description>
    <label>Time Frame</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>