src/core-crm/objects/Success_Action__c/validationRules/Actual_End_Date_Is_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_End_Date_Is_After_Start_Date</fullName>
    <active>true</active>
    <description>This validation is triggered when the Actual End Date occurs before the Actual Start Date.</description>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED(Actual_End_Date__c)
  ),
  Actual_End_Date__c &lt; Actual_Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>Actual_End_Date__c</errorDisplayField>
    <errorMessage>The Actual End Date must be after the Actual Start Date.</errorMessage>
</ValidationRule>