src/core-crm/objects/Success_Action__c/validationRules/Actual_Start_Date_Is_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Start_Date_Is_Before_End_Date</fullName>
    <active>true</active>
    <description>This validation rule is triggered when the Actual Start Date field occurs after the Actual End Date field.</description>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED(Actual_Start_Date__c)
  ),
  Actual_Start_Date__c &gt; Actual_End_Date__c
)</errorConditionFormula>
    <errorDisplayField>Actual_Start_Date__c</errorDisplayField>
    <errorMessage>The Actual Start Date must be before the Actual End Date.</errorMessage>
</ValidationRule>