src/core-crm/objects/Success_Action__c/validationRules/Planned_End_Date_Is_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Planned_End_Date_Is_After_Start_Date</fullName>
    <active>true</active>
    <description>This validation is triggered when the Planned End Date occurs before the Planned Start Date.</description>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED(Planned_End_Date__c)
  ),
  Planned_End_Date__c &lt; Planned_Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>Planned_End_Date__c</errorDisplayField>
    <errorMessage>The Planned End Date must be after the Planned Start Date.</errorMessage>
</ValidationRule>