src/core-crm/objects/Success_Action__c/validationRules/Planned_Start_Date_Is_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Planned_Start_Date_Is_Before_End_Date</fullName>
    <active>true</active>
    <description>This validation is triggered when the Planned Start Date is set to occur after the Planned End Date.</description>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED(Planned_Start_Date__c)
  ),
  Planned_Start_Date__c &gt; Planned_End_Date__c
)</errorConditionFormula>
    <errorDisplayField>Planned_Start_Date__c</errorDisplayField>
    <errorMessage>The Planned Start Date must be before the Planned End Date.</errorMessage>
</ValidationRule>